# prism

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/demo/: README.md  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/demo/app/: globals.css  layout.tsx  page.tsx
apps/demo/app/api/aggregation/: route.ts
apps/demo/app/api/disclose/: route.ts
apps/demo/app/api/notes/: route.ts
apps/demo/app/api/omnichain/: route.ts
apps/demo/app/api/setup/: route.ts
apps/demo/app/demo/: page.tsx
apps/demo/components/: Header.tsx  PrismMark.tsx  WalletConnect.tsx  Wizard.tsx  steps.tsx  ui.tsx
apps/demo/data/: demo-data.json
apps/demo/lib/: demoData.ts  stellar.ts  walletKit.ts
apps/demo/scripts/: build-demo-data.mjs
apps/demo/src/: index.ts
apps/demo/types/: shims.d.ts
circuits/: package.json
circuits/fixtures/: proof.json  public.json  verification_key.json
circuits/fixtures/agg_k1/: meta.json  proof.json  public.json  verification_key.json
circuits/fixtures/agg_k2/: meta.json  proof.json  public.json  verification_key.json
circuits/fixtures/agg_k4/: meta.json  proof.json  public.json  verification_key.json
circuits/fixtures/agg_k8/: meta.json  proof.json  public.json  verification_key.json
circuits/fixtures/disclosure/: meta.json  proof.json  public.json  verification_key.json
circuits/scripts/: aggregate_build.sh  auditor_verify.mjs  build.sh  derisk_ecdh.mjs  disclosure_build.sh  export_agg_cli.mjs  export_agg_fixtures_rs.mjs  export_cli_args.mjs  export_disclosure_fixtures_rs.mjs  export_fixtures_rs.mjs  export_poseidon_consts_rs.mjs  gen_agg_input.mjs  gen_disclosure_input.mjs  gen_disclosure_notes.mjs  gen_input.mjs  gen_omnichain_demo.mjs
circuits/src/: aggregation.circom  disclosure.circom  membership.circom
contracts/: Cargo.toml
contracts/aggregator/: Cargo.toml
contracts/aggregator/src/: agg_fixtures.rs  bench.rs  lib.rs  test.rs
contracts/asp/: Cargo.toml
contracts/asp/src/: lib.rs  test.rs
contracts/commitment-tree/: Cargo.toml
contracts/commitment-tree/src/: lib.rs  test.rs
contracts/disclosure/: Cargo.toml
contracts/disclosure/src/: disclosure_fixtures.rs  lib.rs  test.rs
contracts/nullifier-registry/: Cargo.toml
contracts/nullifier-registry/src/: lib.rs  test.rs
contracts/omnichain-mirror/: Cargo.toml
contracts/omnichain-mirror/src/: lib.rs  test.rs
contracts/poseidon/: Cargo.toml
contracts/poseidon/src/: constants_t3.rs  lib.rs
contracts/verifier-registry/: Cargo.toml
contracts/verifier-registry/src/: lib.rs  test.rs  test_fixtures.rs
docs/: ARCHITECTURE.md  BENCHMARKS.md  README.md  RECEIPTS.md  ROADMAP.md  SDK.md  SECURITY.md  SEP57-MAPPING.md
services/: README.md
services/relayer/: evm-spent.json  relayer.mjs
