# Prism — Soroban contracts workspace
# Canonical proof system: Groth16 over BN254 (native host functions, Protocol 26+).
[workspace]
resolver = "2"
members = [
    "poseidon",
    "verifier-registry",
    "commitment-tree",
    "nullifier-registry",
    "aggregator",
    "omnichain-mirror",
    "disclosure",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/jatinsahijwani/prism"
rust-version = "1.89"

[workspace.dependencies]
soroban-sdk = "26.1.0"

# Release profile tuned for small, deterministic Soroban wasm (mirrors soroban-examples).
[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
