[package]
name = "prism-stellar-commitment-tree"
description = "Prism — append-only incremental Merkle tree (circomlib Poseidon, BN254)"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
prism-stellar-poseidon = { path = "../poseidon" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
